--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
         - name: node-container
-          image: trainwithshubham/node-app-batch-6
+          image: awanpk/node-todo:v1.0
           ports:
             - containerPort: 8000
           resources:
