--- a/k8s/pod.yml
+++ b/k8s/pod.yml
@@ -7,6 +7,6 @@ metadata:
 spec:
   containers:
     - name: node-container
-      image: trainwithshubham/node-app-batch-6
+      image: awanpk/node-todo:v1.0
       ports:
         - containerPort: 8000
